--- a/admin/src/scss/layout/_typography.scss
+++ b/admin/src/scss/layout/_typography.scss
@@ -115,6 +115,12 @@ h4,
 	}
 }
 
+%text-truncate {
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
+}
+
 .list {
 	padding-left: 0px;
 	padding-right: 0px;
